--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <p>test</p>
+    <h1>Contact Me</h1>
+    <p>My email:hakim@gmail.com</p>
+    <p>My phone number: 08123456789</p>
   </body>
 </html>
